# pts-framework

./: .gitignore  .gitlab-ci.yml  README.md  TODO.txt  clim_chamber.py  common.py  executor.py  gui_test.py  indexing.yaml  interpreter.py  interpreter_bridge.py  interpreter_core.py  main.py  my_sequence copy.yaml  my_sequence.yaml  pts.py  pyproject.toml  recipe.py  recipe1.yaml  recipe2.yaml  reliability.yaml  requirements.txt  reuse.toml  run_tests.py  scratchpad.py  sequence.py  step.py  step_result.py  sub_sequence.yaml  test_dut.py  test_for_teststand.py  test_thing.py
docs/: .gitignore  INSTALL
docs/source/: api.rst  architecture.rst  conf.py  dependency_license_analysis.rst  examples.rst  genindex.rst  gui_architecture.rst  gui_event_handling.rst  index.rst  instruments.rst  report_generation.rst  troubleshooting.rst  usage.rst  yaml_format.rst
images/: Front_Panel_Test.jpg.license  lego2.jpg.license  pypts_quick_run.gif.license
pypts/: __init__.py
pypts/tests/: test_pypts.py
resources/examples/: file1.py
resources/images/: Front_Panel_Test.jpg.license
resources/recipes/: comprehensive_recipe.yml  graph_testing.yml  simple_recipe.yml
spikes/GUI/: Form_based_editor.py  ModelView.py  QScintilla_editor.py  dev_tests.py  gui_testing.py  simple ModelView.py
spikes/example_finder/: example finder.py
spikes/import_tests/: import_test.py  imported.py  imported_b.py
spikes/interpreter/: interpreter.py  interpreter_bridge.py  interpreter_tests.py
spikes/others/: cli.py  development.py
spikes/tdms/: npTDMS_reader.py  npTDMS_writer.py
spikes/teststand/: test_for_teststand.py  test_seq.seq  test_seq.seq.license
src/pypts/: Instrument_test_examples.py  README.md  __init__.py  __main__.py  clim_chamber.py  common.py  customGUIModules.py  dev_tests.py  driveFLEX_tests.py  event_proxy.py  example_tests.py  exceptions.py  gui.py  gui_test.py  gui_theme.py  logger.py  new_recipe.yml  pts.py  recipe.py  recipe_creator.py  report.py  rules.py  startup.py  steps.py  utils.py  verify_recipe.py  verify_recipe_copy.py
temp_report_output/: report_2026-04-22_14h20.csv  report_2026-04-22_14h20.html
tests/: test_call_from_library.py  test_recipe.py  test_report.py
tests/functional_tests/: call_from_library.py  test_call_from_library.py  test_recipes_format.py
tests/unit_tests/: test_a_gui.py  test_clim_chamber.py  test_common.py  test_event_proxy.py  test_exceptions.py  test_gui.py  test_gui_new.py  test_gui_theme.py  test_pts.py  test_pyside6_conversion.py  test_recipe.py  test_recipe.yaml  test_recipe_creator.py  test_report.py  test_ssh_upload_step.py  test_steps.py  test_utils.py  test_version.py
unit_tests/functional_tests/: call_from_library.py  (+1 more)
(+149 files in other folders)
